VPC.tf
resource "aws_vpc" "ramesh_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  instance_tenancy = "default"

  tags = {
    Name = "${var.name_prefix}-vpc"
  }
}
